"Updated HTML files: removed linear gradient from banner background, reformatted code, and added whitespace for readability."

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
     >
         <div
             style="
-                background: linear-gradient(
-                        rgba(255, 255, 255, 0.4),
-                        rgba(255, 255, 255, 0.9)
-                    ),
-                    url('./images/banner.jpg');
+                background: url('./images/banner.png');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
