--- a/index_emailCompatible.html
+++ b/index_emailCompatible.html
@@ -1,83 +1,191 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email Template</title>
-</head>
-<body style="background-color: #f0f0f0; margin: 0; padding: 0; width: 100%; font-family: sans-serif;">
-    <table cellpadding="0" cellspacing="0" border="0" align="center" style="width: 650px; margin: 0 auto; border: 1px solid #000; background-color: #f0f0f0;">
-        <!-- Header Section -->
-        <tr>
-            <td style="padding: 0;">
-                <table width="100%" cellpadding="0" cellspacing="0" border="0">
-                    <tr>
-                        <td style="background: url('https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/banner.png?raw=true') no-repeat center; background-size: cover; text-align: center;">
-                            <img src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/skybook_logo.png?raw=true" alt="SKYBOOK.PRO" width="50%" style="margin: 36px 0;" />
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Email Template</title>
+    </head>
+    <body
+        style="
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            font-family: sans-serif;
+            color:#000;
+        "
+    >
+        <table
+            cellpadding="0"
+            cellspacing="0"
+            border="0"
+            align="center"
+            style="
+                width: 650px;
+                margin: 0 auto;
+                border: 1px solid #000;
+                background-color: #f0f0f0;
+            "
+        >
+            <!-- Header Section -->
+            <tr>
+                <td style="padding: 0">
+                    <table
+                        width="100%"
+                        cellpadding="0"
+                        cellspacing="0"
+                        border="0"
+                    >
+                        <tr>
+                            <td
+                                style="
+                                    background: url('https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/banner.png?raw=true')
+                                        no-repeat center;
+                                    background-size: cover;
+                                    text-align: center;
+                                "
+                            >
+                                <img
+                                    src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/skybook_logo.png?raw=true"
+                                    alt="SKYBOOK.PRO"
+                                    width="50%"
+                                    style="margin: 36px 0"
+                                />
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
 
-        <!-- Body Section -->
-        <tr>
-            <td>
-                <table  cellpadding="0" cellspacing="0" border="0" style="background-color: #f3f6fa; border: 1px solid #ccc; border-radius: 5px; margin: 0 32px; padding: 18px;">
-                    <tr>
-                        <td style="font-style: italic; font-size: 16px; font-family: sans-serif; font-weight: 100;">
-                            <p>Cher partenaire,</p>
-                            <p>
-                                Dans le cadre de la régularisation de votre situation via notre
-                                centrale SkyBook.pro et Afin de procéder à cette dernière, nous
-                                vous prions de bien vouloir nous envoyer les documents suivants:
-                            </p>
-                            <ul>
-                                <li>Contrat de partenariat 2024 signé et cacheté</li>
-                                <li>Pièce D'identité du Gérant</li>
-                                <li>Registre du commerce</li>
-                                <li>Agrément</li>
-                                <li>NIF</li>
-                                <li>Logo sous forme png</li>
-                            </ul>
-                            <p>
-                                Nous restons à votre disposition pour toute information complémentaire
-                                ou pour vous assister dans cette démarche.
-                            </p>
-                            <p>
-                                N'hésitez pas à nous contacter si vous avez des questions ou des préoccupations.
-                            </p>
-                            <p>Cordialement.</p>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
+            <!-- Body Section -->
+            <tr>
+                <td>
+                    <table
+                        cellpadding="0"
+                        cellspacing="0"
+                        border="0"
+                        style="
+                            background-color: #f3f6fa;
+                            border: 1px solid #ccc;
+                            border-radius: 5px;
+                            margin: 0 32px;
+                            padding: 18px;
+                        "
+                    >
+                        <tr>
+                            <td
+                                style="
+                                    font-style: italic;
+                                    font-size: 16px;
+                                    font-family: sans-serif;
+                                    font-weight: 100;
+                                "
+                            >
+                                <p>Cher partenaire,</p>
+                                <p>
+                                    Dans le cadre de la régularisation de votre
+                                    situation via notre centrale SkyBook.pro et
+                                    Afin de procéder à cette dernière, nous vous
+                                    prions de bien vouloir nous envoyer les
+                                    documents suivants:
+                                </p>
+                                <ul>
+                                    <li>
+                                        Contrat de partenariat 2024 signé et
+                                        cacheté
+                                    </li>
+                                    <li>Pièce D'identité du Gérant</li>
+                                    <li>Registre du commerce</li>
+                                    <li>Agrément</li>
+                                    <li>NIF</li>
+                                    <li>Logo sous forme png</li>
+                                </ul>
+                                <p>
+                                    Nous restons à votre disposition pour toute
+                                    information complémentaire ou pour vous
+                                    assister dans cette démarche.
+                                </p>
+                                <p>
+                                    N'hésitez pas à nous contacter si vous avez
+                                    des questions ou des préoccupations.
+                                </p>
+                                <p>Cordialement.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
 
-        <!-- Footer Section -->
-        <tr>
-            <td style="padding: 16px;">
-                <table width="100%" cellpadding="0" cellspacing="0" border="0">
-                    <tr>
-                        <td style="width: 40%; text-align: center;">
-                            <a href="http://www.skybook.pro"><img src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/skybook_logo.png?raw=true" alt="SKYBOOK.PRO" width="80%" style="margin: 20px 0;" /></a>
-                        </td>
-                        <td style="width: 60%; vertical-align: middle; margin: 0 0 0 20px;">
-                            <p style="font-size: 20px; font-weight: 600; font-style: italic; margin: 0;">Abir</p>
-                            <p style="font-size: 17px; color: #333; margin: 6px 0;">Service Commercial</p>
-                            <a href="tel:+213561963188" style="text-decoration: none; color: #000; font-size: 18px;">+213 561 96 31 88</a>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
+            <!-- Footer Section -->
+            <tr>
+                <td style="padding: 16px">
+                    <table
+                        width="100%"
+                        cellpadding="0"
+                        cellspacing="0"
+                        border="0"
+                    >
+                        <tr>
+                            <td style="width: 40%; text-align: center">
+                                <a href="http://www.skybook.pro"
+                                    ><img
+                                        src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/skybook_logo.png?raw=true"
+                                        alt="SKYBOOK.PRO"
+                                        width="80%"
+                                        style="margin: 20px 0"
+                                /></a>
+                            </td>
+                            <td
+                                style="
+                                    width: 60%;
+                                    vertical-align: middle;
+                                    margin: 0 0 0 20px;
+                                "
+                            >
+                                <p
+                                    style="
+                                        font-size: 20px;
+                                        font-weight: 600;
+                                        font-style: italic;
+                                        margin: 0;
+                                    "
+                                >
+                                    Abir
+                                </p>
+                                <p
+                                    style="
+                                        font-size: 17px;
+                                        color: #333;
+                                        margin: 6px 0;
+                                    "
+                                >
+                                    Service Commercial
+                                </p>
+                                <a
+                                    href="tel:+213561963188"
+                                    style="
+                                        text-decoration: none;
+                                        color: #000;
+                                        font-size: 18px;
+                                    "
+                                    >+213 561 96 31 88</a
+                                >
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
 
-        <!-- Bottom Image Section -->
-        <tr>
-            <td style="padding: 0;">
-                <img src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/footer.png?raw=true" width="100%" alt="Footer Image" />
-            </td>
-        </tr>
-    </table>
-</body>
+            <!-- Bottom Image Section -->
+            <tr>
+                <td style="padding: 0">
+                    <img
+                        src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/footer.png?raw=true"
+                        width="100%"
+                        alt="Footer Image"
+                    />
+                </td>
+            </tr>
+        </table>
+    </body>
 </html>
