--- a/index_onlineImages.html
+++ b/index_onlineImages.html
@@ -19,11 +19,7 @@
     >
         <div
             style="
-                background: linear-gradient(
-                        rgba(255, 255, 255, 0.3),
-                        rgba(255, 255, 255, 0.6)
-                    ),
-                    url('https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/banner.png?raw=true');
+                background: url('https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/banner.png?raw=true');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -118,6 +114,9 @@
                 >
             </div>
         </div>
-        <img src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/footer.png?raw=true" width="100%" />
+        <img
+            src="https://github.com/chouaib-629/partenaireMessage_skybook_mail/blob/main/images/footer.png?raw=true"
+            width="100%"
+        />
     </body>
 </html>
