--- a/index_emailCompatible.html
+++ b/index_emailCompatible.html
@@ -23,7 +23,6 @@
             style="
                 width: 650px;
                 margin: 0 auto;
-                border: 1px solid #000;
                 background-color: #f0f0f0;
             "
         >
@@ -79,6 +78,7 @@
                                     font-size: 16px;
                                     font-family: sans-serif;
                                     font-weight: 100;
+                                    color: #111;
                                 "
                             >
                                 <p>Cher partenaire,</p>
@@ -148,6 +148,7 @@
                                         font-weight: 600;
                                         font-style: italic;
                                         margin: 0;
+                                        color: #000;
                                     "
                                 >
                                     Abir
